--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -7,7 +7,7 @@
 <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
 
-<link rel="stylesheet" href="{% static 'estatico.css' %}">
+<link rel="stylesheet" href="{% static 'estatico.css' %}" {% now "U" %}>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
@@ -20,24 +20,26 @@
 </head>
 
 <body>
+    <!-- Primer Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
       <div class="container-fluid">
-              <a class="navbar-brand" href="/">
-                  <img src="{% static 'nodo.jpeg' %}" alt="Bootstrap" width="48" height="48">
-              </a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-              <a class="nav-link" href="/">Home</a>
-              <a class="nav-link" href="/operaciones_cbr">Operaciones</a>
-              <a class="nav-link" href="/usuarios">Usuarios</a>
-              <a class="nav-link" href="/configuracion">Configuración</a> 
-          </div>
+        <a class="navbar-brand" href="/">
+            <img src="{% static 'nodo.jpeg' %}" alt="Bootstrap" width="32" height="32">
+        </a>
+        <div class="collapse navbar-collapse">
+
+          <ul class="navbar-nav" id="nav-ppal">
+            {% for option in navppal %}
+                <li class="nav-item">
+                    <a class="nav-link first-nav-option navbar-link-prim" href="{{ option.link }}">{{ option.name }}</a>
+                </li>
+            {% endfor %}
+          </ul>
+          
         </div>
-        
-      </div>
     </nav>
 
-    <div class="container-fluid d-flex flex-row">
+    <div class="container-fluid d-flex flex-row" id="main-content">
       {% block contenedor %}Contenedor principal{% endblock contenedor%}
     </div>
 </body>
